--- a/main.html
+++ b/main.html
@@ -18,6 +18,9 @@
         <tr>
           <th>Promise Name</th>
           <th>Time taken (s)</th>
+		
+      <tr colspan="2"><th>Loading...</th></tr>
+    
         </tr>
       </thead>
       <tbody id="output"></tbody>
